--- a/libuv_app/Makefile
+++ b/libuv_app/Makefile
@@ -2,7 +2,7 @@ RTE_SDK=$(CURRENT_DIR)../dpdk-1.6.0r2
 RTE_TARGET ?= x86_64-default-linuxapp-gcc
 include $(RTE_SDK)/mk/rte.extvars.mk
 SRC_ROOT=$(CURRENT_DIR)
-SRCS-y :=  ../porting/libuv_app.c
+SRCS-y :=  app.c libuv_app.c
 #CFLAGS += -g
 CFLAGS += -Ofast  
 CFLAGS += $(WERROR_FLAGS) 
@@ -15,5 +15,5 @@ CFLAGS += $(ALL_HEADERS) -DMAXCPU=32 -D__UAPI_DEF_IN6_ADDR=1 -D__UAPI_DEF_SOCKAD
 -DCONFIG_X86_64 -DCONFIG_GENERIC_ATOMIC64 -DTCP_BIND_CACHE_SIZE=16384 \
 -DINET_PEER_CACHE_SIZE=16384 -DSOCK_CACHE_SIZE=32768 -DRUN_TO_COMPLETE -DMAX_PKT_BURST=32 \
 -DMULTIPLE_MEM_ALLOC=0 -DOPTIMIZE_SENDPAGES -DOPTIMIZE_TCP_RECEIVE -DCONFIG_NET_POLL_CONTROLLER
-LIB = libperfm
+LIB = libuv_app
 include $(RTE_SDK)/mk/rte.extlib.mk
