--- a/libuv_app/Makefile
+++ b/libuv_app/Makefile
@@ -8,12 +8,12 @@ CFLAGS += -Ofast
 CFLAGS += $(WERROR_FLAGS) 
 LINUX_HEADERS=$(SRC_ROOT)../
 DPDK_HEADERS=$(SRC_ROOT)../dpdk-1.6.0r2/x86_64-default-linuxapp-gcc/include
-ALL_HEADERS = -I$(LINUX_HEADERS) -I$(DPDK_HEADERS)
+ALL_HEADERS = -I$(LINUX_HEADERS) -I$(DPDK_HEADERS) -I$(SRC_ROOT)../../../libuv/include -I$(SRC_ROOT)../../../libuv/test
 CFLAGS += $(ALL_HEADERS) -DMAXCPU=32 -D__UAPI_DEF_IN6_ADDR=1 -D__UAPI_DEF_SOCKADDR_IN6=1 -D__UAPI_DEF_IN6_ADDR_ALT=1 -DCONFIG_INET\
 -D__UAPI_DEF_IPPROTO_V6=1 -DCONFIG_SLAB -DCONFIG_HZ=4000 -DNR_CPUS=32 -DCONFIG_64BIT -DCONFIG_SMP \
 -DCONFIG_NETFILTER -DCONFIG_NETLABEL \
 -DCONFIG_X86_64 -DCONFIG_GENERIC_ATOMIC64 -DTCP_BIND_CACHE_SIZE=16384 \
 -DINET_PEER_CACHE_SIZE=16384 -DSOCK_CACHE_SIZE=32768 -DRUN_TO_COMPLETE -DMAX_PKT_BURST=32 \
 -DMULTIPLE_MEM_ALLOC=0 -DOPTIMIZE_SENDPAGES -DOPTIMIZE_TCP_RECEIVE -DCONFIG_NET_POLL_CONTROLLER
-LIB = libuv_app
+LIB = libuv_app.a
 include $(RTE_SDK)/mk/rte.extlib.mk
