shared libraries instead of static to build with quagga

--- a/service/ipaugenblick_app_api/Makefile
+++ b/service/ipaugenblick_app_api/Makefile
@@ -15,5 +15,5 @@ CFLAGS += $(ALL_HEADERS) -DMAXCPU=32 -D__UAPI_DEF_IN6_ADDR=1 -D__UAPI_DEF_SOCKAD
 -DCONFIG_X86_64 -DCONFIG_GENERIC_ATOMIC64 -DTCP_BIND_CACHE_SIZE=16384 \
 -DINET_PEER_CACHE_SIZE=16384 -DSOCK_CACHE_SIZE=32768 -DRUN_TO_COMPLETE -DMAX_PKT_BURST=32 \
 -DMULTIPLE_MEM_ALLOC=0 -DOPTIMIZE_SENDPAGES -DOPTIMIZE_TCP_RECEIVE -DCONFIG_NET_POLL_CONTROLLER -DMBUF_SIZE=1448
-LIB = libipaugenblickservice.a
-include $(RTE_SDK)/mk/rte.extlib.mk
+SHARED = libipaugenblickservice.so
+include $(RTE_SDK)/mk/rte.extshared.mk
