--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,9 @@
 *.i*86
 *.x86_64
 *.hex
-
-
+dpdk-2.0.0/x86_64-native-linuxapp-gcc
+service/build
+service/ipaugenblick_srv
+service/test_client/test_client_tcp_with_select
+service/ipaugenblick_app_api/build/
+build/
