fixed path to shared lib

--- a/stack_and_service/service/Makefile
+++ b/stack_and_service/service/Makefile
@@ -15,6 +15,6 @@ CFLAGS += $(ALL_HEADERS) -DMAXCPU=32 -D__UAPI_DEF_IN6_ADDR=1 -D__UAPI_DEF_SOCKAD
 -DCONFIG_X86_64 -DCONFIG_GENERIC_ATOMIC64 -DTCP_BIND_CACHE_SIZE=16384 \
 -DINET_PEER_CACHE_SIZE=16384 -DSOCK_CACHE_SIZE=32768 -DRUN_TO_COMPLETE -DMAX_PKT_BURST=32 \
 -DMULTIPLE_MEM_ALLOC=0 -DOPTIMIZE_SENDPAGES -DOPTIMIZE_TCP_RECEIVE -DCONFIG_NET_POLL_CONTROLLER -DMBUF_SIZE=1448
-LDFLAGS += -L$(CURRENT_DIR)/build/lib -lnetinet
+LDFLAGS += -L$(CURRENT_DIR)/stack_and_service/stack_and_service/x86_64-native-linuxapp-gcc -lnetinet
 APP = ipaugenblick_srv
 include $(RTE_SDK)/mk/rte.extapp.mk
