loopback if no ports, bug fixes

--- a/stack_and_service/Makefile
+++ b/stack_and_service/Makefile
@@ -25,7 +25,8 @@ drivers/net/loopback.c kernel/notifier.c porting/mm_porting.c porting/timer_port
 porting/timing_porting.c porting/tasklet_workqueues_porting.c porting/app_glue.c \
 porting/libinit.c porting/show_mib_stats.c \
 drivers/net/dpdk/rx.c drivers/net/dpdk/tx.c \
-drivers/net/dpdk/dpdk_sw_loop.c drivers/net/dpdk/device.c service/ipaugenblick_service_loop.c
+drivers/net/dpdk/dpdk_sw_loop.c drivers/net/dpdk/device.c service/ipaugenblick_service_loop.c \
+log/ipaugenblick_log.c
 #CFLAGS += -g
 CFLAGS += -Ofast   
 CFLAGS += $(WERROR_FLAGS) 
