--- a/stack_and_service/Makefile
+++ b/stack_and_service/Makefile
@@ -38,8 +38,7 @@ CFLAGS += $(ALL_HEADERS) -DMAXCPU=32 -D__UAPI_DEF_IN6_ADDR=1 -D__UAPI_DEF_SOCKAD
 -DCONFIG_NETFILTER -DCONFIG_NETLABEL -DCONFIG_NET_POLL_CONTROLLER \
 -DCONFIG_X86_64 -DCONFIG_GENERIC_ATOMIC64 -DTCP_BIND_CACHE_SIZE=16384 \
 -DINET_PEER_CACHE_SIZE=16384 -DSOCK_CACHE_SIZE=32768 -DRUN_TO_COMPLETE -DMAX_PKT_BURST=32 \
--DMULTIPLE_MEM_ALLOC=0 -DOPTIMIZE_SENDPAGES -DOPTIMIZE_TCP_RECEIVE -DCONFIG_SYN_COOKIES -DIPAUGENBLICK_UDP_OPTIMIZATION 
-#-DOFFLOAD_NOT_YET
+-DMULTIPLE_MEM_ALLOC=0 -DOPTIMIZE_SENDPAGES -DOPTIMIZE_TCP_RECEIVE -DCONFIG_SYN_COOKIES -DIPAUGENBLICK_UDP_OPTIMIZATION -DOFFLOAD_NOT_YET
 
 SHARED = libnetinet.so
 include $(RTE_SDK)/mk/rte.extshared.mk
